syntax = "proto3";

package keyring;

option java_multiple_files = true;
option java_package = "com.floreina.keyring";

message RegisterRequest {
    string username = 1;
    string salt = 2;
    string digest = 3;
    string mail = 4;
}

message RegisterResponse {
    enum Error {
        NONE = 0;
        NAME_TAKEN = 1;
    }

    oneof data {
        Error error = 1;
        string session_key = 2;
    }
}

message ActivateRequest {
    string code = 1;
}

message ActivateResponse {
    enum Error {
        NONE = 0;
        CODE_MISMATCH = 1;
    }

    oneof data {
        Error error = 1;
    }
}

message GetSaltRequest {
    string username = 1;
}

message GetSaltResponse {
    enum Error {
        NONE = 0;
        NOT_FOUND = 1;
    }

    oneof data {
        Error error = 1;
        string salt = 2;
    }
}

message LogInRequest {
    string username = 1;
    string digest = 2;
}

message LogInResponse {
    enum Error {
        NONE = 0;
        INVALID_CREDENTIALS = 1;
    }

    message Payload {
        reserved 2;

        enum Challenge {
            NONE = 0;
            ACTIVATE = 1;
        }

        message KeySet {
            repeated IdentifiedKey items = 1;
        }

        string session_key = 1;

        oneof data {
            Challenge challenge = 3;
            KeySet key_set = 4;
        }
    }

    oneof data {
        Error error = 1;
        Payload payload = 2;
    }
}

message KeepAliveRequest {
    string session_key = 1;
}

message KeepAliveResponse {
    enum Error {
        NONE = 0;
        INVALID_KEY = 1;
    }

    Error error = 1;
}

service Authentication {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc GetSalt (GetSaltRequest) returns (GetSaltResponse);
    rpc LogIn (LogInRequest) returns (LogInResponse);
    rpc KeepAlive (KeepAliveRequest) returns (KeepAliveResponse);
}

message Password {
    string value = 1;
    repeated string tags = 2;
}

message IdentifiedKey {
    int64 identifier = 1;
    Password password = 2;
}

message CreateKeyRequest {
    Password password = 1;
}

message CreateKeyResponse {
    int64 identifier = 1;
}

message ReadKeysRequest {
}

message ReadKeysResponse {
    repeated IdentifiedKey keys = 1;
}

message UpdateKeyRequest {
    IdentifiedKey key = 1;
}

message UpdateKeyResponse {
}

message DeleteKeyRequest {
    int64 identifier = 1;
}

message DeleteKeyResponse {
}

message ChangeMasterKeyRequest {
    message Renewal {
        string salt = 1;
        string digest = 2;
        repeated IdentifiedKey keys = 3;
    }

    string current_digest = 1;
    Renewal renewal = 2;
}

message ChangeMasterKeyResponse {
    enum Error {
        NONE = 0;
        INVALID_CURRENT_DIGEST = 1;
    }

    Error error = 1;
}

service Administration {
    rpc Activate (ActivateRequest) returns (ActivateResponse);
    rpc CreateKey (CreateKeyRequest) returns (CreateKeyResponse);
    rpc ReadKeys (ReadKeysRequest) returns (ReadKeysResponse);
    rpc UpdateKey (UpdateKeyRequest) returns (UpdateKeyResponse);
    rpc DeleteKey (DeleteKeyRequest) returns (DeleteKeyResponse);
    rpc ChangeMasterKey (ChangeMasterKeyRequest) returns (ChangeMasterKeyResponse);
}
